# SmartFAQ

./: .cloudflare-build-config.md  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  4803Levu  4803Levu.pub  CLOUDFLARE_DEPLOYMENT.md  CONTRIBUTING.md  DEPLOY.md  Makefile  README.md  Readme1.md  TEAM_SETUP.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .env.example  API_ENDPOINTS.md  CHANGELOG_RAG_ENHANCEMENTS.md  CONFIDENCE_RELEVANCE_UPDATE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.prod  ENV_VARIABLES_GUIDE.md  GETTING_STARTED.md  MIGRATION_GUIDE.md  Makefile  PRIORITY_2_CHANGELOG.md  QUERY_IMPROVEMENTS.md  README.md  RETRIEVAL_IMPROVEMENTS.md  TEST_CASE_FIXES.md  pyproject.toml  test-case.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_add_user_contact.py  002_add_campus_department.py  03fd80152102_add_chat_sessions.py  06ea341d33b0_add_is_active_to_user.py  0d1a61d8ae75_rename_table_document.py  2e9637530317_fix_document_table.py  36846f0655fd_add_token_blacklist_table.py  376369171de3_merge_multiple_heads_2025_12_03_23_42.py  4046fafbc4a0_add_token_blacklist_and_user_fields.py  5a92820537fe_merge_multiple_heads_2025_12_03_16_35.py  709c209cad81_make_category_nullable.py  71fc97c0b8ce_change_status.py  8598ecc7ad30_add_token_blacklist.py  8bc81c17c465_update_user_model.py  9fd90da3b1c8_add_token_blacklist_table.py  ae7c9136e04d_merge_multiple_heads_2025_11_28_13_16.py  bd43cf121469_update_user_table.py  d7165892e3a5_drop_table_messages_and_querylog.py  dac48aab7df1_add_email_phone_address_image.py  e0638dae1ecb_merge_multiple_heads_2025_11_27_01_34.py  edf6d57f7111_merge_multiple_heads_2025_11_26_10_50.py  f1027a5bd3dd_add_department_model.py  f19c919bb909_merge_multiple_heads_2025_12_03_23_32.py  f639d527b5a4_add_email_column_to_users.py  f7d5b5e3db99_init_database.py  merge_4046fafbc4a0_8bc81c17c465.py
apps/api/app/: main.py
apps/api/app/api/: __init__.py  admin.py  auth.py  chat.py  dashboard.py  departments.py  docs.py  fallback.py  schemas.py  settings.py  staff.py
apps/api/app/api/dto/: __init__.py  user_dto.py
apps/api/app/constants/: chat.py  departments.py
apps/api/app/core/: __init__.py  cache.py  config.py  database.py  db.py  input_validation.py  mongo.py  rate_limiter.py  security.py  users.py
apps/api/app/dataset/: data.txt
apps/api/app/dto/: __init__.py  admin.py
apps/api/app/models/: __init__.py  chat.py  config.py  config_entry.py  department.py  document.py  document_version.py  fallback_log.py  query_log.py  token_blacklist.py  user.py  user_department.py
apps/api/app/rag/: __init__.py  document.py  document_processor.py  embedder.py  entity_extractor.py  evaluation.py  formatter.py  guardrail.py  intent_detector.py  lang_utils.py  language.py  llm.py  metrics.py  mock_llm.py  normalizer.py  orchestrator.py  pipeline.py  prompts.py  query_expander.py  question_understanding.py  retriever.py  types.py  vector_store.py
apps/api/app/repositories/: chat_messages_repo.py  chat_sessions_repo.py
apps/api/app/schemas/: __init__.py  admin.py  admin_schemas.py  auth.py  chat.py  dashboard.py  department_schemas.py  document.py  logs.py  schemas.py  settings.py  user.py
apps/api/app/services/: __init__.py  admin_service.py  ams.py  auth_service.py  chat_service.py  dms.py  ds.py  email_service.py  embedding_service.py  fallback.py  faq_service.py  metrics.py  ums.py  user_service.py
apps/api/app/utils/: chat_input_utils.py  chat_response_utils.py  logging_config.py
apps/api/app/workers/: __init__.py  cron.py  tasks.py
apps/api/docs/: EVALUATION_GUIDE.md  METRICS_DASHBOARD_SETUP.md
apps/api/logs/: rag_metrics.json
apps/api/scripts/: check_migrations.py  create_test_user.py  create_test_users.sql  debug_rag_flow.py  debug_rag_flow_mock.py  generate_data.py  generate_hashes.py  generate_password_hash.py  insert_user_sql.py  run_confidence_benchmark.py  run_evaluation.py  seed_users.sql  show_chunks.py  test_api_endpoints.sh  test_api_flow.py  test_interactive.py  test_setup.py  test_users.sql  train_model.py
apps/api/tests/: conftest.py  test_entity_extractor.py  test_error_handling.py  test_health.py  test_intent_detector.py  test_normalizer.py  test_question_understanding.py
apps/api/tests/evaluation/: test_cases.json
(+292 files in other folders)
