[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenwich-smartfaq-api"
version = "0.1.0"
description = "FastAPI backend for Greenwich SmartFAQ"
authors = [{ name = "Dev Team" }]
requires-python = ">=3.11"

# Dependencies với lower + upper bounds rõ ràng
dependencies = [
  # API Framework
  "fastapi>=0.120,<0.121",
  "uvicorn[standard]>=0.30,<0.31",

  # Database
  "sqlalchemy>=2.0,<2.1",
  "psycopg[binary]>=3.2,<3.3",
  "psycopg2-binary>=2.9,<3.0",
  "greenlet>=3.0,<4.0",
  "alembic>=1.13,<1.14",

  # MongoDB async driver
  "motor>=3.4,<4.0",

  # Settings & Auth
  "pydantic-settings>=2.4,<2.5",
  "python-jose[cryptography]>=3.3,<3.4",
  "passlib[bcrypt]>=1.7,<1.8",

  # LangChain Core (chỉ giữ những gì thực sự dùng)
  "langchain>=1.0,<1.1",
  "langchain-core>=1.0,<1.1",
  "langchain-openai>=1,<2",
  "langchain-google-genai>=3.0,<3.1",
  "langchain-chroma>=1,<2",
  "langchain-huggingface>=1.0.0,<2.0",
  "langchain-text-splitters>=1.0,<1.1",

  # Embeddings & ML
  "sentence-transformers>=3.0,<3.1",
  "torch>=2.5.0,<2.6",

  # Document Processing
  "pypdf>=4.0,<5.0",
  "docx2txt>=0.8,<0.9",

  # Background Tasks
  "celery>=5.4,<5.5",
  "redis>=5.0,<5.1",
  "minio>=7.2,<8.0",
  "python-multipart>=0.0.9,<0.1",

  # Email validator
  "email-validator>=2.0,<2.1",

  # Cloudinary
  "cloudinary>=1.34,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-cov>=5.0,<6.0",
  "httpx>=0.27,<0.28",
  "ruff>=0.5,<0.6",
  "black>=24.8,<25.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["scripts", "tests", "alembic", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.black]
target-version = ["py311"]
line-length = 100
extend-exclude = '''
/(
    scripts
  | tests
  | alembic
  | venv
)/
'''
